@@ -1,3 +1,7 @@
+2011-01-17  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* Makefile: Update compile rules.
+
 2011-01-16  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* Makefile (CFLAGS): Add -O3.
